sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:9: error: '(' expected but identifier found.
      if plusPetit(j, indMini)
         ^